# arbitrage_task_Openhedge

arbitrage_bot/: Cargo.toml
arbitrage_bot/src/: aevo_client.rs  calculations.rs  lib.rs  main.rs  structs.rs  structs_general.rs
arbitrage_bot/src/aevo/: aevo_orderbook_feed.rs  aevo_structs.rs  mod.rs
arbitrage_bot/src/dxdy/: dxdy_orderbook_feed.rs  dxdy_structs.rs  mod.rs
